// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu /> should not render links 1`] = `
<div>
  <button
    aria-label="Open/Close Menu"
    class="sc-eCYdqJ htFPjf"
  >
    <svg
      aria-hidden="true"
      aria-label="Open Menu"
      class="StyledIconBase-ea9ulj-0 lbJwfL"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
      />
    </svg>
  </button>
  <div
    class="sc-dkzDqf iAYlfV"
  >
    <div
      class="sc-bczRLJ bFmWNK"
    >
      <div
        class="sc-hKMtZM jfsuhj"
      >
        <h1
          class="sc-gsnTZi hQyYne"
        >
          <a
            class="sc-jSMfEi iZjaRP"
            href="#target"
          >
            Logo
          </a>
        </h1>
        <nav
          aria-label="Main Menu"
          class="sc-gKXOVf hjDHrt"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Menu /> should render Logo and  MainMenu 1`] = `
<div>
  <button
    aria-label="Open/Close Menu"
    class="sc-eCYdqJ htFPjf"
  >
    <svg
      aria-hidden="true"
      aria-label="Open Menu"
      class="StyledIconBase-ea9ulj-0 lbJwfL"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
      />
    </svg>
  </button>
  <div
    class="sc-dkzDqf iAYlfV"
  >
    <div
      class="sc-bczRLJ bFmWNK"
    >
      <div
        class="sc-hKMtZM jfsuhj"
      >
        <h1
          class="sc-gsnTZi hQyYne"
        >
          <a
            class="sc-jSMfEi iZjaRP"
            href="#target"
          >
            Logo
          </a>
        </h1>
        <nav
          aria-label="Main Menu"
          class="sc-gKXOVf hjDHrt"
        >
          <a
            class="sc-iBkjds cjQOBn"
            href="#target1"
            target="_self"
          >
            Link 1
          </a>
          <a
            class="sc-iBkjds cjQOBn"
            href="#target2"
            target="_self"
          >
            Link 2
          </a>
          <a
            class="sc-iBkjds cjQOBn"
            href="#target3"
            target="_self"
          >
            Link 3
          </a>
          <a
            class="sc-iBkjds cjQOBn"
            href="#target4"
            target="_self"
          >
            Link 4
          </a>
          <a
            class="sc-iBkjds cjQOBn"
            href="#target5"
            target="_self"
          >
            Link 5
          </a>
          <a
            class="sc-iBkjds cjQOBn"
            href="#target6"
            target="_self"
          >
            Link 6
          </a>
          <a
            class="sc-iBkjds cjQOBn"
            href="#target7"
            target="_self"
          >
            Link 7
          </a>
          <a
            class="sc-iBkjds cjQOBn"
            href="#target8"
            target="_self"
          >
            Link 8
          </a>
          <a
            class="sc-iBkjds cjQOBn"
            href="#target9"
            target="_self"
          >
            Link 9
          </a>
          <a
            class="sc-iBkjds cjQOBn"
            href="#target10"
            target="_self"
          >
            Link 10
          </a>
        </nav>
      </div>
    </div>
  </div>
</div>
`;
